--- a/src/main/resources/templates/html_bootstrap.vm
+++ b/src/main/resources/templates/html_bootstrap.vm
@@ -44,10 +44,10 @@
             <tr>
                 <th>Hot Spot</th>
                 <th>Hit Count</th>
-                <th>Inner Time</th>
-                <th>Average Inner Time</th>
-                <th>Outer Time</th>
-                <th>Average Outer Time</th>
+                <th>Inner Time (ms)</th>
+                <th>Average Inner Time (µs)</th>
+                <th>Outer Time (ms)</th>
+                <th>Average Outer Time (µs)</th>
             </tr>
         </thead>
 		  <tbody>
@@ -60,16 +60,16 @@
             $hotspot.getHitCount()
           </td>
           <td class="text-right">
-            $hotspot.getInnerTime()
+            $numberTool.format("0.00", $mathTool.div($hotspot.getInnerTime(), 1000000)) 
           </td>
           <td class="text-right">
-            $hotspot.getAverageInnerTime()
+            $numberTool.format("0.00", $mathTool.div($hotspot.getAverageInnerTime(), 1000))
           </td>
           <td class="text-right">
-            $hotspot.getTotalTime()
+            $numberTool.format("0.00", $mathTool.div($hotspot.getTotalTime(), 1000000))
           </td>
           <td class="text-right">
-            $hotspot.getAverageTotalTime()
+            $numberTool.format("0.00", $mathTool.div($hotspot.getAverageTotalTime(), 1000))
           </td>
         </tr>
     #end
